--- a/app/app/src/main/res/layout/review_row.xml
+++ b/app/app/src/main/res/layout/review_row.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/row_user"
+            android:id="@+id/text_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.33"
@@ -56,7 +56,7 @@
             android:layout_weight="8.33" />
 
         <RatingBar
-            android:id="@+id/ratingBar5"
+            android:id="@+id/rb_access"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
             android:layout_weight="1" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/rb_avail"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
             android:layout_weight="1" />
 
         <RatingBar
-            android:id="@+id/ratingBar3"
+            android:id="@+id/rb_clean"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -103,11 +103,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/rewview_comment"
+            android:id="@+id/text_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:text="Sample text sample text sample text sample text sample text " />
     </LinearLayout>
 
 </LinearLayout>
