--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/activity_preview_bathroom"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    tools:context="ca.team2.crapmap.PreviewBathroomActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -115,18 +116,6 @@
             tools:layout_editor_absoluteX="126dp"
             tools:layout_editor_absoluteY="16dp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_newComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_add_white_24dp"
-            app:backgroundTint="@color/common_google_signin_btn_text_light_default"
-            tools:layout_editor_absoluteY="430dp"
-            tools:layout_editor_absoluteX="303dp" />
-
         <ListView
             android:id="@+id/review_listView"
             android:layout_width="358dp"
@@ -135,5 +124,17 @@
             tools:layout_editor_absoluteY="188dp" />
 
     </android.support.constraint.ConstraintLayout>
-</LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_newComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_add_white_24dp"
+        tools:layout_editor_absoluteY="430dp"
+        tools:layout_editor_absoluteX="303dp" />
+
+</RelativeLayout>
 
