--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -1,15 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_newComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="9dp"
+        android:src="@drawable/ic_add_white_24dp"
+        app:backgroundTint="@color/common_google_signin_btn_text_light_default"
+        app:elevation="12dp"
+        tools:layout_editor_absoluteX="312dp"
+        tools:layout_editor_absoluteY="439dp" />
+
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.34">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RatingBar
             android:id="@+id/rating_average_accessibility"
@@ -76,33 +100,53 @@
 
         <TextView
             android:id="@+id/text_cleanliness"
-            android:layout_width="152dp"
+            android:layout_width="0dp"
             android:layout_height="19dp"
             android:text="Cleanliness::"
             android:textAlignment="textEnd"
             android:textSize="14sp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="152dp" />
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintRight_toRightOf="@+id/text_availability"
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/text_availability"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/text_availability" />
 
         <TextView
             android:id="@+id/text_availability"
-            android:layout_width="152dp"
+            android:layout_width="0dp"
             android:layout_height="19dp"
             android:text="Availability:"
             android:textAlignment="textEnd"
             android:textSize="14sp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="108dp" />
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintRight_toRightOf="@+id/text_accessibility"
+            android:layout_marginTop="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/text_accessibility"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/text_accessibility" />
 
         <TextView
             android:id="@+id/text_accessibility"
-            android:layout_width="152dp"
-            android:layout_height="19dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="Accessibility:"
             android:textAlignment="textEnd"
             android:textSize="14sp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="64dp" />
+            app:layout_constraintRight_toLeftOf="@+id/rating_average_accessibility"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintBottom_creator="1"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/rating_average_accessibility"
+            android:layout_marginEnd="11dp"
+            android:layout_marginTop="8dp"
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/rating_average_accessibility" />
 
         <TextView
             android:id="@+id/text_bathroom"
@@ -112,28 +156,28 @@
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
-            tools:layout_editor_absoluteX="126dp"
-            tools:layout_editor_absoluteY="16dp" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_newComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_add_white_24dp"
-            app:backgroundTint="@color/common_google_signin_btn_text_light_default"
-            tools:layout_editor_absoluteY="430dp"
-            tools:layout_editor_absoluteX="303dp" />
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintBottom_creator="1"
+            app:layout_constraintBottom_toTopOf="@+id/rating_average_accessibility"
+            android:layout_marginStart="110dp"
+            android:layout_marginEnd="110dp"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginBottom="18dp"
+            app:layout_constraintLeft_toLeftOf="@+id/text_accessibility" />
 
         <ListView
             android:id="@+id/review_listView"
-            android:layout_width="358dp"
+            android:layout_width="0dp"
             android:layout_height="314dp"
-            tools:layout_editor_absoluteX="13dp"
-            tools:layout_editor_absoluteY="188dp" />
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="13dp"
+            app:layout_constraintTop_toBottomOf="@+id/rating_average_cleanliness"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
 
