--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -30,7 +30,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryLight"
-            android:isIndicator="false"
+            android:clickable="false"
+            android:contextClickable="false"
             android:numStars="5"
             android:rating="3"
             android:visibility="visible"
@@ -51,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryLight"
-            android:isIndicator="false"
+            android:clickable="false"
             android:numStars="5"
             android:rating="3"
             android:visibility="visible"
@@ -72,7 +73,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryLight"
-            android:isIndicator="false"
+            android:clickable="false"
+            android:contextClickable="false"
+            android:longClickable="false"
             android:numStars="5"
             android:rating="3"
             android:visibility="visible"
@@ -149,11 +152,32 @@
             tools:layout_editor_absoluteY="16dp" />
 
 
+        <TextView
+            android:id="@+id/text_reviews"
+            android:layout_width="365dp"
+            android:layout_height="32dp"
+            android:paddingTop="15dp"
+            android:text="Reviews:"
+            android:textColor="@color/common_google_signin_btn_text_light_pressed"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="1dp"
+            android:layout_marginTop="11dp"
+            app:layout_constraintTop_toBottomOf="@+id/rating_average_cleanliness" />
+
         <ListView
             android:id="@+id/review_listView"
-            android:layout_width="0dp"
-            android:layout_height="314dp"
-            android:layout_marginTop="13dp"
+            android:layout_width="match_parent"
+            android:layout_height="274dp"
+            android:layout_marginTop="45dp"
+            android:background="@color/common_google_signin_btn_text_light_default"
+            android:divider="@color/common_google_signin_btn_text_light_disabled"
+            android:footerDividersEnabled="true"
+            android:headerDividersEnabled="true"
+            android:paddingBottom="1dp"
+            android:paddingLeft="1dp"
+            android:paddingRight="1dp"
+            android:paddingTop="1dp"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rating_average_cleanliness"
